--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
 html {
   scroll-behavior: smooth;
 
@@ -10,6 +11,7 @@ html {
   font-weight: 500;
   font-style: normal;
 }
+
 body {
   position: relative;
 }
@@ -88,87 +90,109 @@ body {
 
 /* this is the header section  */
 header {
-    width: 100%;
-    background-color: teal;
-    position: fixed;
-    z-index: 11;
-  }
-  
-  .container-one {
-    height: 65px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: teal;
+  color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+
+}
+
+.logo img {
+  width: 85px;
+}
+
+nav {
+  position: relative;
+}
+
+.burger-menu {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 20px;
+}
+
+.burger-menu .line {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  margin: 0;
+
+}
+
+.nav-links li {
+  margin: 0 15px;
+}
+
+.nav-links li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 0;
+
+}
+
+.nav-links li a:hover {
+  color: #ffdc7f;
+
+  border-bottom: 3px solid #ffdc7f;
+
+}
+
+/* Mobile Styles */
+@media (max-width: 768px) {
+  .burger-menu {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0 20px; /* Add some padding to align the content better */
   }
-  
-  .logo {
-    flex: 1;
-  }
-  
-  .nav-section nav ul {
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .nav-section nav ul li a {
-    text-decoration: none;
-    color: #ffffff;
-    margin-right: 42px;
-    transition: 0.3s ease;
-    border-bottom: 3px solid transparent;
-  }
-  
-  .nav-section a:hover {
-    color: #ffdc7f;
-    border-bottom: 3px solid #ffdc7f;
-  }
-  
-  /* Styles for the burger menu */
-  .burger {
+
+  .nav-links {
     display: none;
-    cursor: pointer;
-    font-size: 1.5em;
-    color: #ffffff;
+    position: fixed;
+
+    top: 80px;
+
+    left: 0;
+
+    width: 100vw;
+
+    flex-direction: column;
+    background-color: teal;
+    border-radius: 0;
+    padding: 10px 0;
+    z-index: 999;
+
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
   }
-  
-  .burger i {
-    transition: transform 0.3s ease;
+
+  .nav-links.active {
+    display: flex;
   }
-  
-  /* Media query for mobile */
-  @media (max-width: 768px) {
-    .nav-section nav ul {
-      display: none;
-      flex-direction: column;
-      background-color: teal;
-      position: absolute;
-      top: 65px;
-      right: 0;
-      width: 100%;
-      text-align: center;
-    }
-  
-    .nav-section nav ul.show {
-      display: flex;
-    }
-  
-    .nav-section nav ul li {
-      margin: 15px 0;
-    }
-  
-    .burger {
-      display: block;
-    }
-  
-    .logo {
-      flex: none; /* Remove flex-grow on logo in mobile */
-    }
+
+  .nav-links li {
+    margin: 10px 0;
+    text-align: center;
   }
-  
+
+  .nav-links li a {
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+  }
+}
 
 /* end of header section */
 
@@ -180,7 +204,6 @@ header {
   justify-content: center;
   min-height: 100vh;
   gap: 100px;
-  /* padding: 20px; */
   width: 100%;
 }
 
@@ -191,21 +214,26 @@ header {
   margin: 10px 0px 0px 75px;
   object-fit: cover;
 }
+
 .text-one h1 {
   font-size: 4em;
 }
+
 span {
   color: teal;
 }
+
 .text-one h3 {
   font-size: 3em;
   margin-bottom: 1rem;
 }
+
 .positions span::before {
   content: "Software Developer";
   color: teal;
   animation: words 10s infinite;
 }
+
 .positions span::after {
   content: "";
   height: 100%;
@@ -219,48 +247,49 @@ span {
 }
 
 @keyframes words {
+
   0%,
   25% {
     content: "Web Developer";
   }
+
   26%,
   50% {
     content: "Script Writer";
   }
+
   51%,
   75% {
     content: "Software Developer";
   }
+
   76%,
   100% {
     content: "Full Stack Developer";
   }
 }
+
 .text-one p {
   line-height: 1.5em;
   margin-right: 80px;
 }
 
 .container-three {
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 44%,
-    rgba(0, 128, 128, 0.6336659663865547) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(255, 255, 255, 1) 44%,
+      rgba(0, 128, 128, 0.6336659663865547) 100%);
   width: 100%;
   height: 100vh;
   padding-top: 10px;
-  /* padding: 5px; */
+
 }
+
 .container-three h1 {
   text-align: center;
   margin-top: 125px;
-  
-  /* padding-top: 10%; */
-  /* margin-bottom: 60px; */
-  /* position: relative; */
-  /* font-size: 2.25em; */
+
 }
+
 .container-three h1::after {
   content: "";
   background-color: teal;
@@ -271,20 +300,9 @@ span {
   left: 50%;
   transform: translateX(-50%);
 }
-/* .row {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
-  
-   grid-template-columns:  repeat(3, 1fr);
-   align-items: center;
-  justify-items: center;
-} */
+
 .row {
-  /* display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    justify-items: center;
-    justify-content: center; */
+
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
@@ -305,19 +323,23 @@ span {
   transition: transform 0.5s, background 0.5s;
   width: 25%;
 }
+
 .service i {
   font-size: 40px;
   margin-bottom: 15px;
   color: teal;
 }
+
 .service h2 {
   margin-bottom: 8px;
 }
+
 .service:hover {
   background-color: teal;
   color: #ffffff;
   transform: scale(1);
 }
+
 .service:hover i {
   color: white;
 }
@@ -328,8 +350,9 @@ span {
   background: white;
   width: 100%;
 }
-.container-four h1{
- margin-top: 125px
+
+.container-four h1 {
+  margin-top: 125px
 }
 
 
@@ -340,6 +363,7 @@ span {
   position: relative;
 
 }
+
 .title::after {
   content: "";
   background-color: teal;
@@ -350,6 +374,7 @@ span {
   left: 50%;
   transform: translateX(-50%);
 }
+
 .list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -358,18 +383,21 @@ span {
   text-align: center;
   padding: 0 80px;
   font-size: 1.25em;
-  /* any help here please  */
+
   height: 91vh;
 }
+
 .skill-box {
   padding: 16px;
   color: black;
-  /* cursor: pointer; */
+
 }
-.skill-box:hover > .skill-name::after,
-.skill-box:hover > .skill-name::before {
+
+.skill-box:hover>.skill-name::after,
+.skill-box:hover>.skill-name::before {
   width: 35px;
 }
+
 .skill-name::before {
   content: "";
   position: absolute;
@@ -380,18 +408,20 @@ span {
   background-color: teal;
   transition: 1s;
 }
+
 .skill-name {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 8px;
-  /* margin-bottom: 8px; */
   position: relative;
 }
+
 .icons-one i {
   font-size: 40px;
   color: teal;
 }
+
 .skill-name h3 {
   margin: 10px;
 }
@@ -400,11 +430,6 @@ span {
 
 /* testimonials section  */
 .container-five {
-  /* background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 44%,
-    rgba(0, 128, 128, 0.6336659663865547) 100%
-  ); */
   background-color: rgb(237, 237, 237);
   height: 100vh;
   margin: auto;
@@ -412,15 +437,18 @@ span {
   text-align: center;
   place-items: center;
 }
+
 .container-five .text-two h2 {
   font-size: 1.5em;
   margin-top: 70px;
 }
+
 .container-five .text-two h1 {
   position: relative;
   margin-bottom: 36px;
   font-size: 2.5em;
 }
+
 .container-five .text-two h1::after {
   position: absolute;
   content: "";
@@ -439,8 +467,8 @@ span {
   flex-wrap: wrap;
   justify-content: center;
 }
+
 .person {
-  /* max-width: 30%; */
   width: 30%;
   margin: 10px;
   box-shadow: 2px 2px 5px grey;
@@ -449,9 +477,11 @@ span {
   transition: 0.5s;
   background-color: #fff;
 }
+
 .person:hover {
   box-shadow: 2px 2px 10px grey;
 }
+
 .person img {
   width: 100px;
   height: 100px;
@@ -459,16 +489,19 @@ span {
   border: 1px solid grey;
   border-radius: 50%;
 }
+
 .person .name {
   text-transform: uppercase;
   font-size: 1.2em;
   margin: 10px 0;
 }
+
 .person .rating {
   margin: 10px 0;
   color: orange;
   font-size: 20px;
 }
+
 .person .description {
   padding: 25px;
   font-style: italic;
@@ -486,6 +519,7 @@ span {
   padding: 20px;
   margin: auto;
 }
+
 .title-two {
   text-align: center;
   font-size: 20px;
@@ -494,6 +528,7 @@ span {
   margin-bottom: 30px;
   margin-top: 70px;
 }
+
 .title-two::after {
   content: "";
   background-color: teal;
@@ -513,6 +548,7 @@ span {
   align-items: center;
   justify-content: center;
 }
+
 .highlight-item {
   height: 180px;
   text-align: center;
@@ -527,12 +563,15 @@ span {
   width: 60%;
   line-height: 2rem;
 }
+
 .highlight-item h2 {
   color: black;
 }
+
 .highlight-item p {
   color: black;
 }
+
 .highlight-item a {
   color: teal;
   border: 0;
@@ -543,6 +582,7 @@ span {
   text-align: center;
   width: 100%;
 }
+
 .highlight-item:hover {
   background-color: rgb(143, 155, 155);
 }
@@ -591,43 +631,50 @@ footer {
     height: auto;
     justify-content: center;
   }
+
   .nav-section {
     width: 100%;
     margin-left: 50px;
   }
+
   .nav-section nav ul {
     flex-direction: column;
     gap: 3px;
-    /* justify-content: center; */
     align-items: center;
   }
+
   .container-two {
     flex-direction: column;
     height: auto;
     align-items: center;
     justify-content: center;
   }
+
   .my-pic img {
     width: 250px;
     height: 250px;
     border-radius: 50%;
     margin: 0;
   }
+
   .text-one {
     text-align: center;
   }
+
   .text-one h1 {
     font-size: 2em;
-    /* margin-top: 100px; */
-    /* line-height: ; */
+
   }
+
   span {
     color: teal;
   }
+
   .text-one h3 {
     font-size: 1em;
     margin-bottom: 1rem;
   }
+
   .text-one p {
     line-height: 1.25em;
     margin-right: 0px;
@@ -638,13 +685,7 @@ footer {
     height: auto;
     padding: 15px;
   }
-  /* .container-three h1 {
-    text-align: center;
-    padding-top: 0;
-    margin-bottom: 15px;
-    position: relative;
-    font-size: 9em;
-  } */
+
   .row {
 
     display: flex;
@@ -653,7 +694,8 @@ footer {
     align-items: center;
     justify-content: center;
   }
-  .service{
+
+  .service {
     width: 100%;
   }
 
@@ -662,12 +704,14 @@ footer {
     width: 100%;
     height: 100vh;
   }
+
   .title {
     text-align: center;
     font-size: 20px;
     padding: 7px;
     position: relative;
   }
+
   .list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -676,21 +720,22 @@ footer {
     /* any help here please  */
     height: 81vh;
   }
+
   .skill-box {
     padding: 16px;
     color: black;
   }
+
   .container-five {
-    background: linear-gradient(
-      90deg,
-      rgba(255, 255, 255, 1) 44%,
-      rgba(0, 128, 128, 0.6336659663865547) 100%
-    );
+    background: linear-gradient(90deg,
+        rgba(255, 255, 255, 1) 44%,
+        rgba(0, 128, 128, 0.6336659663865547) 100%);
     height: auto;
     margin: auto;
     padding: 32px 16px;
     text-align: center;
   }
+
   .container-five .text-two h2 {
     font-size: 1.5em;
   }
@@ -700,11 +745,13 @@ footer {
     margin-bottom: 36px;
     font-size: 2.5em;
   }
+
   .section-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
   }
+
   .section-card {
     position: relative;
     isolation: isolate;
@@ -715,6 +762,7 @@ footer {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     transition: 0.3s;
   }
+
   #testimonials {
     display: block;
   }
@@ -726,6 +774,7 @@ footer {
     width: 100%;
     height: auto;
   }
+
   .person {
     width: 100%;
   }
@@ -739,6 +788,7 @@ footer {
   body {
     width: 100%;
   }
+
   .person {
     width: 90%;
   }
