--- a/style.css
+++ b/style.css
@@ -654,11 +654,15 @@ footer {
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    margin: 0;
+    margin-top: 30%;
+    margin-right: 60px;
+    align-items: center;
+    justify-content: center;
   }
 
   .text-one {
     text-align: center;
+    margin-bottom: 15%;
   }
 
   .text-one h1 {
@@ -703,6 +707,7 @@ footer {
     background: white;
     width: 100%;
     height: 100vh;
+    margin-bottom: 50px;
   }
 
   .title {
@@ -746,22 +751,7 @@ footer {
     font-size: 2.5em;
   }
 
-  .section-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-  }
-
-  .section-card {
-    position: relative;
-    isolation: isolate;
-    overflow: hidden;
-    padding: 5rem 2rem 2rem;
-    background-color: #ffffff;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
-    transition: 0.3s;
-  }
+ 
 
   #testimonials {
     display: block;
